--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,17 +12,18 @@ services:
       - app-network
   
   nginx:
-    image: nginx:latest
-    container_name: nginx-proxy
-    ports:
-      - "80:80"
-    volumes:
-      - ~/nginx-html:/usr/share/nginx/html:ro
-    networks:
-      - app-network
-    depends_on:
-      - app1
-      - app2
+  image: nginx:latest
+  container_name: nginx-proxy
+  ports:
+    - "80:80"
+  volumes:
+    - /home/ubuntu/nginx-html:/usr/share/nginx/html:ro
+  networks:
+    - app-network
+  depends_on:
+    - app1
+    - app2
+
 
 networks:
   app-network:
