--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,30 @@
+version: "3.8"
+
 services:
   app1:
     build: ./app1
     container_name: app1
     networks:
       - app-network
-    
+
   app2:
     build: ./app2
     container_name: app2
     networks:
       - app-network
-  
-  nginx:
-  image: nginx:latest
-  container_name: nginx-proxy
-  ports:
-    - "80:80"
-  volumes:
-    - /home/ubuntu/nginx-html:/usr/share/nginx/html:ro
-  networks:
-    - app-network
-  depends_on:
-    - app1
-    - app2
 
+  nginx:
+    image: nginx:latest
+    container_name: nginx-proxy
+    ports:
+      - "80:80"
+    volumes:
+      - /home/ubuntu/nginx-html:/usr/share/nginx/html:ro
+    networks:
+      - app-network
+    depends_on:
+      - app1
+      - app2
 
 networks:
   app-network:
