--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,21 @@
-version: "3.8"
-  # comment added by me
-services:
+services:Add commentMore actions
   app1:
     build: ./app1
     container_name: app1
     networks:
       - app-network
-
+    
   app2:
     build: ./app2
     container_name: app2
     networks:
       - app-network
-
+  
   nginx:
-    image: nginx:latest
+    build: ./nginx
     container_name: nginx-proxy
     ports:
       - "80:80"
-    volumes:
-      - /home/ubuntu/nginx-html:/usr/share/nginx/html:ro
     networks:
       - app-network
     depends_on:
